fix: update card box, button filter & show/hide box filter view on mobile & desktop

--- a/practices/practice-one/src/assets/stylesheets/components/_button.scss
+++ b/practices/practice-one/src/assets/stylesheets/components/_button.scss
@@ -96,11 +96,21 @@
 
   &-filter {
     background: url('./src/assets/images/filter.svg') 16px no-repeat;
-    background-color: $bg-color-primary;
+    background-color: $bg-color-secondary;
     color: $filter-button-color;
     margin: 6px 0px;
     padding: 15px 28px 14px 55px;
     box-sizing: border-box;
+    border: 0;
+    box-shadow: 0px 1px 3px $box-shadow-color-filter;
+    margin-right: 20px;
+
+    @include only-for-desktop() {
+      background-color: $bg-color-primary;
+      margin-right: 0px;
+      border: 1px solid $border-filter-button;
+      box-shadow: none;
+    }
   }
 
   &-display {
