--- a/practices/practice-one/src/assets/stylesheets/components/_card.scss
+++ b/practices/practice-one/src/assets/stylesheets/components/_card.scss
@@ -6,8 +6,12 @@
   &-container {
     background: $bg-color-secondary;
     padding: 13px 18px 39px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: none;
     border-radius: 5px;
+
+    @include only-for-desktop() {
+      box-shadow: 0px 1px 3px $box-shadow-card-box;
+    }
 
     &-img {
       background: $bg-color-primary;
